<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <variable
            name="vm"
            type="jp.cordea.libros.viewmodel.MainViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="jp.cordea.libros.MainActivity"
        tools:showIn="@layout/activity_main">

        <ListView
            android:id="@+id/list_view"
            app:adapter="@{vm.adapter}"
            android:onItemLongClick="@{vm.onItemLongClick}"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <FrameLayout
            android:visibility="@{vm.errorVisibility}"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="@dimen/error_title_text_size"
                    android:layout_marginBottom="@dimen/error_title_margin_bottom"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/primary_text"
                    android:text="@string/error_network_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="@dimen/error_message_text_size"
                    android:layout_marginBottom="@dimen/error_message_margin_bottom"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/secondary_text"
                    android:text="@string/error_network_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.AppCompatButton
                    android:layout_gravity="center_horizontal"
                    android:text="@string/retry"
                    android:onClick="@{vm.retryOnClick}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:visibility="@{vm.progressVisibility}"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <android.support.v4.widget.ContentLoadingProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>
    </FrameLayout>
</layout>
